@@ -1,3 +1,7 @@
+2008-02-15  Mark Ellis <mark@mpellis.org.uk>
+
+	* added man page for unshield
+
 2008-01-09  Mark Ellis <mark@mpellis.org.uk>
 
 	* started changelog
